--- a/index.html
+++ b/index.html
@@ -334,6 +334,8 @@
         <select id="locationPreset" onchange="updateLocation()">
           <option value="">-- Select a preset or enter custom below --</option>
           <option value='USERDEFINEDAREA^{"id":9934682}'>Custom Map Area (Default)</option>
+          <option value='USERDEFINEDAREA^{"id":9797538}'>Hounslow stations</option>
+          <option value='USERDEFINEDAREA^{"id":9797529}'>Ealing Stations</option>
           <option value="REGION%5E93962">Hounslow</option>
           <option value="REGION%5E93947">Ealing</option>
           <option value="REGION%5E85314">Acton</option>
